Add Forge 1.21.1 target and canonical config